<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TextView
	    android:id="@+id/connection_prompt_label"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingRight="8dp"
	    android:text="@string/mac_address" />

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:weightSum="100">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="5"
			android:paddingRight="8dp" />

		<EditText
		    android:id="@+id/connection_editText"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="95"
		    android:ems="10"
		    android:hint="@string/mac_addr_hint"
		    android:inputType="text" />

	</LinearLayout>

	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingRight="8dp" />

	<TextView
	    android:id="@+id/port_textView"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/port" />

	<LinearLayout
	   android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:weightSum="100">

	    <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="5"
			android:paddingRight="8dp" />

	    <EditText
	        android:id="@+id/port_editText"
	        android:layout_weight="95"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:ems="10"
	        android:hint="@string/port_hint"
	        android:inputType="number" />
	</LinearLayout>
	
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingRight="8dp" />

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:weightSum="100">

		<Button
		    android:id="@+id/save_button"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="50"
		    android:text="@string/Save_Done_Button" />

		<Button
			android:text="@string/Cancel_Button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="50"
			android:id="@+id/cancel_button"></Button>
	</LinearLayout>
	
	
</LinearLayout>
