<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/connectionMainLayout"
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".DO_AndroidSDKDemo_MainActivity" >

        <TextView
            android:id="@+id/connection_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100" >

            <Spinner
                android:id="@+id/connection_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="100"
                android:entries="@array/connection_array" />

            <Button
                android:id="@+id/configConn_button"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/config" />

        </LinearLayout>

        <TextView
            android:id="@+id/printerMode_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/printer_mode" />

        <LinearLayout
            android:id="@+id/printerMode_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100" >

            <Spinner
                android:id="@+id/printer_mode_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/printer_mode_array" />
        </LinearLayout>

        <TextView
            android:id="@+id/actionMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perform_task" />

        <RadioGroup
            android:id="@+id/performTaskRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/print_radioButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/print" />

            <RadioButton
                android:id="@+id/query_radioButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/query" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/printItems_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/print_items" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100" >

            <Spinner
                android:id="@+id/print_items_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="100" />

            <Button
                android:id="@+id/browse_button"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="100"
                android:text="@string/browse" />

        </LinearLayout>

        <TextView
            android:id="@+id/communication_status_information"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/printing_status_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/print_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/print" />

            <Button
                android:id="@+id/saveSettings_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save_settings" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>